# Core

./: CMakeLists.txt  Description.txt  ReadMe.md  Welcome.txt
.github/workflows/: build.yml  cmake.yml  linux.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: CMakeHelperFunctions.cmake  Config.cmake.in  CoreConfig.cmake.in  HelperFunctions.cmake
dependencies/: CMakeLists.txt
dependencies/abseil/: CMakeLists.txt
dependencies/debug_assert/: CMakeLists.txt
dependencies/span-lite/: CMakeLists.txt
dependencies/stringview-lite/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/color/: CMakeLists.txt
src/color/include/Core/Color/: ColorRGBA.hpp  ColorTheme.hpp
src/color/source/Color/: ColorRGBA.cpp  ColorTheme.cpp
src/core_settings/: CMakeLists.txt
src/core_settings_lib/: CMakeLists.txt
src/math/: CMakeLists.txt
src/math/Core/Math/: Constants.hpp  Eps.hpp
src/math/twCore/Math/: Constants.hpp  Eps.hpp
src/math_lib/: CMakeLists.txt
src/math_lib/Core/Math/: Constants.hpp
src/types/: CMakeLists.txt
src/types/Core/Types/: TArray.hpp  THashMap.hpp  TMap.hpp  TSet.hpp  TSpan.hpp  TString.hpp  TStringView.hpp  TVector.hpp
src/types/twCore/Types/: TArray.hpp  THashMap.hpp  TMap.hpp  TSet.hpp  TString.hpp  TStringView.hpp  TVector.hpp
src/types_lib/: CMakeLists.txt
src/types_lib/Core/Types/: TArray.hpp  TSet.hpp  TSpan.hpp  TString.hpp  TStringView.hpp
src/utils/: CMakeLists.txt
src/utils/include/Core/Utils/: Assert.hpp  Compiler.hpp  Warnings.h
src/utils_lib/: CMakeLists.txt
src/utils_lib/Core/Utils/: Assert.hpp  Compiler.hpp  Warnings.hpp
test/: CMakeLists.txt
test/test_install/: CMakeLists.txt
test/test_install/core_install_test_template/: CMakeLists.txt
test/test_install/tw_core_math_install_test_template/: main.cpp
test/test_install/tw_core_math_install_test_template/cmake/: test_mathConfig.cmake.in
test/test_math/: CMakeLists.txt
test/test_types/: CMakeLists.txt  test_THashMap.cpp  test_TSet.cpp  test_TSpan.cpp  test_TStringView.cpp  test_TVector.cpp
test/test_utils/: CMakeLists.txt  Test_DebugAssert.cpp
tests/: CMakeLists.txt
tests/Test_Math/: CMakeLists.txt  testEps.cpp
tests/test_absl_usage/: CMakeLists.txt  testAbslStrings.cpp  testAbslUsage.cpp
tests/test_math/: CMakeLists.txt  Test_Constants.cpp  Test_Eps.cpp  testEps.cpp
tests/test_types/: CMakeLists.txt  test_THashMap.cpp  test_TMap.cpp  test_TSet.cpp  test_TSpan.cpp  test_TVector.cpp
tests/test_utils/: CMakeLists.txt  Test_DebugAssert.cpp  Test_DebugExceptions.cpp  Test_ReleaseAssert.cpp  Test_ReleaseExceptions.cpp  test_debug_assert.cpp  test_debug_exceptions.cpp  test_release_assert.cpp  test_release_exceptions.cpp
